syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "ToyDbContracts.Routing";

enum DataType {
  Null = 0;
  Bool = 1;
  Int = 2;
  Long = 3;
  Float = 4;
  Double = 5;
  String = 6;
}

message KeyValueRequest {
	DataType type = 2;
	string key = 3;
	google.protobuf.BytesValue value = 4;
}

message KeyValueResponse {
	DataType type = 2;
	string key = 3;
	google.protobuf.BytesValue value = 4;
}

service Routing {
	rpc GetValue (GetRequest) returns (KeyValueResponse);
	rpc GetAllValues (GetAllValuesRequest) returns (GetAllValuesResponse);
	rpc SetValue (KeyValueRequest) returns (KeyValueResponse);
	rpc DeleteValue (DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
	string key = 1;
}

message GetAllValuesRequest {
}

message GetAllValuesResponse {
	repeated KeyValueResponse values = 1;
}

message DeleteRequest { 
	string key = 2;
}

message DeleteResponse {
}